refactor: simplify FileServiceTest and clean up VigenereCipher class